--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
   <!-- Font Link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -29,14 +27,14 @@
           <option value="english">English</option>
           <option value="tamil">Tamil</option>
         </select>
-        <button class="btn sign-btn">Sign in</button>
+        <button class="btn sign-in-btn">Sign in</button>
       </div>
     </nav>
 
     <div class="inner-text">
       <h1>Unlimited movies, <br> TV shows and more</h1>
       <p class="inner-text-p">Starts at ₹149. Cancel at anytime.</p>
-      <p>Ready to watch? Enter your email to create or restart your membership</p>
+      <p class="inner-text-pp">Ready to watch? Enter your email to create or restart your membership</p>
       <div class="inner-text-email">
         <input class="email-input" type="email" name="email" placeholder="Email address">
         <button class="btn sign-btn">Get Started
@@ -488,54 +486,56 @@
           </svg>
         </button>
     </section>
+
+    <section class="link-section">
+      <div class="links">
+        <ul>
+          <div>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Investor Relations</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Speed Text</a></li>
+          </div>
+        </ul>
+        <ul>
+          <div>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Cookies</a></li>
+            <li><a href="#">Legal Notices</a></li>
+          </div>
+        </ul>
+        <ul>
+          <div>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Ways to Watch</a></li>
+            <li><a href="#">Corparate Information</a></li>
+            <li><a href="#">Only on Netflix</a></li>
+          </div>
+        </ul>
+        <ul>
+          <div>
+            <li><a href="#">Media Center</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Contact US</a></li>
+            <li><a href="#">CopyRight</a></li>
+          </div>
+        </ul>
+      </div>
+      <div class="lang">
+        <select>
+          <option value="english">English</option>
+          <option value="tamil">Tamil</option>
+        </select>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <div class="footer-link">
-      <ul>
-        <div>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Investor Relations</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Speed Text</a></li>
-        </div>
-      </ul>
-      <ul>
-        <div>
-          <li><a href="#">Help Center</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Cookies</a></li>
-          <li><a href="#">Legal Notices</a></li>
-        </div>
-      </ul>
-      <ul>
-        <div>
-          <li><a href="#">Account</a></li>
-          <li><a href="#">Ways to Watch</a></li>
-          <li><a href="#">Corparate Information</a></li>
-          <li><a href="#">Only on Netflix</a></li>
-        </div>
-      </ul>
-      <ul>
-        <div>
-          <li><a href="#">Media Center</a></li>
-          <li><a href="#">Terms of Use</a></li>
-          <li><a href="#">Contact US</a></li>
-          <li><a href="#">CopyRight</a></li>
-        </div>
-      </ul>
-    </div>
-    <div class="lang">
-      <select>
-        <option value="english">English</option>
-        <option value="tamil">Tamil</option>
-      </select>
+    <div class="copyright">
+      CopyRight &copy; 2024 <a href="https://github.com/dhanushmathan">Dhanush mathan</a> - All Rights Reserved
     </div>
   </footer>
-  <div class="copyright">
-    CopyRight &copy; 2024 <a href="https://github.com/dhanushmathan">Dhanush mathan</a> - All Rights Reserved
-  </div>
-
 
   <!-- JS Link -->
   <script src="./assrts/script.js"></script>
