design: Changes sytle

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./assrts/img/netflix icon.png">
   <title>Netflix</title>
 
   <!-- CSS Link -->
-  <link rel="stylesheet" href="./assrts/style.css">
+  <link rel="stylesheet" href="./assrts/css/style.css">
 
   <!-- Font Link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,39 +55,37 @@
   <main>
     <section class="card-section">
       <h2>Trending Now</h2>
-      <div class="card-section-title">
-        <div>
-          <select class="card-section-title-1">
-            <option value="india">Indian</option>
-            <option value="global">Global</option>
-          </select>
-        </div>
-        <div>
-          <select class="card-section-title-2">
-            <option value="india">Movies</option>
-            <option value="global">TV shows</option>
-          </select>
-        </div>
-      </div>
       <div>
         <ul class="card-section-img">
           <li>
             <img src="./assrts/img/netflix img1 (1).webp" alt="devara">
           </li>
           <li>
-            <img src="./assrts/img/netflix img1 (5).webp" alt="do patti">
+            <img src="./assrts/img/netflix img1 (2).webp" alt="nayanthara">
+          </li>
+          <li>
+            <img src="./assrts/img/netflix img1 (3).webp" alt="goat">
           </li>
           <li>
             <img src="./assrts/img/netflix img1 (4).webp" alt="meiyazhagan">
           </li>
           <li>
-            <img src="./assrts/img/netflix img1 (3).webp" alt="bo babaiya">
+            <img src="./assrts/img/netflix img1 (5).webp" alt="ankhan">
           </li>
           <li>
-            <img src="./assrts/img/netflix img1 (2).webp" alt="vijay 69">
+            <img src="./assrts/img/netflix img1 (6).webp" alt="animal">
           </li>
           <li>
-            <img src="./assrts/img/netflix img1 (6).webp" alt="the murders">
+            <img src="./assrts/img/netflix img1 (7).webp" alt="do patti">
+          </li>
+          <li>
+            <img src="./assrts/img/netflix img1 (8).webp" alt="bageera">
+          </li>
+          <li>
+            <img src="./assrts/img/netflix img1 (9).webp" alt="khal khal">
+          </li>
+          <li>
+            <img src="./assrts/img/netflix img1 (10).webp" alt="kabil">
           </li>
         </ul>
       </div>
@@ -538,7 +537,7 @@
   </footer>
 
   <!-- JS Link -->
-  <script src="./assrts/script.js"></script>
+  <script src="./assrts/js/script.js"></script>
 </body>
 
 </html>
